--- a/style.css
+++ b/style.css
@@ -31,11 +31,14 @@ p{
     background-color: rgb(33,181,115);
     color:#fff;
     display: block;
-    width:180px;
+    width:50%;
     padding:10px 15px;
     border:none;
     border-radius:38px;
     font-size: 14px;
+}
+.btn-green-sm:focus{
+    border:none;
 }
 .nav-link{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -82,4 +85,18 @@ p{
 .box-img{
     width:80px;
 
+}
+.test{
+    padding: 50px 60px;
+}
+.test p{
+    font-size: 16px;
+    color: #000;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.test-img{
+    position: absolute;
+    width:150px;
+    left:53%;
+    top:-23%;
 }
