--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ p{
 
 .container{
     margin-bottom: 50px;
+    
 }
 .heading-1{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -32,6 +33,9 @@ p{
 .btn-grren:focus{
     border: none;
 }
+.bg-light-g{
+    background: rgb(218, 246, 229);
+}
 .btn-green-sm{
     background-color: rgb(33,181,115);
     color:#fff;
@@ -45,12 +49,21 @@ p{
 .btn-green-sm:focus{
     border:none;
 }
+.shadow{
+    box-shadow: 10px 5px 10px lightgray;
+}
+/* end-of utility -class */
+
+/* nav-style */
 .nav-link{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 22px;
     font-weight:400;
     color:#000 !important;
 }
+/* nav-style-end */
+
+/* card-style */
 .card{
     border:none;
     border-radius: 15px;
@@ -77,13 +90,7 @@ p{
     font-weight: bold;
 
 }
-.shadow{
-    box-shadow: 10px 5px 10px lightgray;
-}
-
-.bg-light-g{
-    background: rgb(218, 246, 229);
-}
+/* card-style-end */
 .banner{
     padding: 40px 50px;
 }
@@ -91,6 +98,7 @@ p{
     width:80px;
 
 }
+/* testmonial style */
 .test{
     padding: 50px 60px;
 }
@@ -98,12 +106,12 @@ p{
     font-size: 16px;
     color: #000;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-top: 15%;
 }
 .test-img{
-    position: absolute;
-    width:150px;
-    left:53%;
-    top:-23%;
+    width:70%;
+    margin-left:33%;
+    display: block;
 }
 /* last-section */
 #last-section{
@@ -120,9 +128,36 @@ p{
 .list-item{
     margin: 5px 0;
 }
+/* footer */
+
 footer{
     background-color: #282531;
     color:#fff;
     text-align: center;
     padding: 10px 2px;
 }
+
+
+ /* meda quires */
+  
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    .card-deck .card {
+      -ms-flex: 0 0 100%;
+      flex: 0 0 100%;
+    }
+  }
+  
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .card-deck .card {
+      -ms-flex: 0 0 100%;
+      flex: 0 60% 40%;
+    }
+  }
+  
+  @media (min-width: 996px)
+  {
+    .card-deck .card {
+      -ms-flex: 33.3% 33.3% 33.3%;
+      flex: 33.3% 33.3% 33.3%;
+    }
+  }
